--- a/TallerGauss/taller-gauss-main/gaussian_elimination.ipynb
+++ b/TallerGauss/taller-gauss-main/gaussian_elimination.ipynb
@@ -110,40 +110,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load_ext autoreload"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[12-24 16:53:24][INFO] \n",
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
+   "source": [
+    "%load_ext autoreload"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[12-24 17:29:13][INFO] \n",
       "[[  1.   1.   0.   3.   4.]\n",
       " [  0.  -1.  -1.  -5.  -7.]\n",
       " [  0.  -4.  -1.  -7. -15.]\n",
       " [  0.   3.   3.   2.   8.]]\n",
-      "[12-24 16:53:24][INFO] \n",
+      "[12-24 17:29:13][INFO] \n",
       "[[  1.   1.   0.   3.   4.]\n",
       " [  0.  -1.  -1.  -5.  -7.]\n",
       " [  0.   0.   3.  13.  13.]\n",
       " [  0.   0.   0. -13. -13.]]\n",
-      "[12-24 16:53:24][INFO] \n",
+      "[12-24 17:29:13][INFO] \n",
       "[[  1.   1.   0.   3.   4.]\n",
       " [  0.  -1.  -1.  -5.  -7.]\n",
       " [  0.   0.   3.  13.  13.]\n",
       " [  0.   0.   0. -13. -13.]]\n",
       "Solución: [-1.  2.  0.  1.]\n",
       "Sumas realizadas: 6\n",
-      "Restas realizadas: 29\n"
+      "Restas realizadas: 29\n",
+      "Multiplicaciones realizadas: 32\n",
+      "Divisiones realizadas: 10\n",
+      "Intercambios de filas: 0\n"
      ]
     }
    ],
@@ -153,39 +165,45 @@
     "\n",
     "Ab = [[1., 1, 0, 3, 4], [2, 1, -1, 1, 1], [3, -1, -1, 2, -3], [-1, 2, 3, -1, 4]]\n",
     "\n",
-    "sol, suma_count, resta_count = eliminacion_gaussiana(Ab)\n",
+    "sol, suma_count, resta_count, mult_count, div_count, intercambio_count = eliminacion_gaussiana(Ab)\n",
     "print('Solución:', sol)\n",
     "print('Sumas realizadas:', suma_count)\n",
-    "print('Restas realizadas:', resta_count)"
+    "print('Restas realizadas:', resta_count)\n",
+    "print('Multiplicaciones realizadas:', mult_count)\n",
+    "print('Divisiones realizadas:', div_count)\n",
+    "print('Intercambios de filas:', intercambio_count)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[12-24 16:53:17][INFO] \n",
+      "[12-24 17:29:07][INFO] \n",
       "[[ 1 -1  2 -1 -8]\n",
       " [ 0  0 -1 -1 -4]\n",
       " [ 0  2 -1  1  6]\n",
       " [ 0  0  2  4 12]]\n",
-      "[12-24 16:53:17][INFO] \n",
+      "[12-24 17:29:07][INFO] \n",
       "[[ 1 -1  2 -1 -8]\n",
       " [ 0  2 -1  1  6]\n",
       " [ 0  0 -1 -1 -4]\n",
       " [ 0  0  2  4 12]]\n",
-      "[12-24 16:53:17][INFO] \n",
+      "[12-24 17:29:07][INFO] \n",
       "[[ 1 -1  2 -1 -8]\n",
       " [ 0  2 -1  1  6]\n",
       " [ 0  0 -1 -1 -4]\n",
       " [ 0  0  0  2  4]]\n",
       "Solución: [-7.  3.  2.  2.]\n",
       "Sumas realizadas: 6\n",
-      "Restas realizadas: 29\n"
+      "Restas realizadas: 29\n",
+      "Multiplicaciones realizadas: 32\n",
+      "Divisiones realizadas: 10\n",
+      "Intercambios de filas: 1\n"
      ]
     }
    ],
@@ -195,10 +213,13 @@
     "\n",
     "Ab = [[1, -1, 2, -1, -8], [2, -2, 3, -3, -20], [1, 1, 1, 0, -2], [1, -1, 4, 3, 4]]\n",
     "\n",
-    "sol, suma_count, resta_count = eliminacion_gaussiana(Ab)\n",
+    "sol, suma_count, resta_count, mult_count, div_count, intercambio_count = eliminacion_gaussiana(Ab)\n",
     "print('Solución:', sol)\n",
     "print('Sumas realizadas:', suma_count)\n",
-    "print('Restas realizadas:', resta_count)"
+    "print('Restas realizadas:', resta_count)\n",
+    "print('Multiplicaciones realizadas:', mult_count)\n",
+    "print('Divisiones realizadas:', div_count)\n",
+    "print('Intercambios de filas:', intercambio_count)"
    ]
   },
   {
@@ -219,14 +240,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[12-24 16:50:49][INFO] \n",
+      "[12-24 17:29:04][INFO] \n",
       "[[ 1.  1.  1.  4.]\n",
       " [ 0.  0. -1. -2.]\n",
       " [ 0.  0.  1.  2.]]\n"
@@ -234,14 +255,14 @@
     },
     {
      "ename": "ValueError",
-     "evalue": "No existe solución única.",
+     "evalue": "No existe soluciÃ³n Ãºnica.",
      "output_type": "error",
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 7\u001b[39m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msrc\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m eliminacion_gaussiana\n\u001b[32m      5\u001b[39m Ab = [[\u001b[32m1.\u001b[39m, \u001b[32m1\u001b[39m, \u001b[32m1\u001b[39m, \u001b[32m4\u001b[39m], [\u001b[32m2\u001b[39m, \u001b[32m2\u001b[39m, \u001b[32m1\u001b[39m, \u001b[32m6\u001b[39m], [\u001b[32m1\u001b[39m, \u001b[32m1\u001b[39m, \u001b[32m2\u001b[39m, \u001b[32m6\u001b[39m]]\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m \u001b[43meliminacion_gaussiana\u001b[49m\u001b[43m(\u001b[49m\u001b[43mAb\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\emore\\Downloads\\taller-gauss-main\\taller-gauss-main\\src\\linear_sist_methods.py:65\u001b[39m, in \u001b[36meliminacion_gaussiana\u001b[39m\u001b[34m(A)\u001b[39m\n\u001b[32m     61\u001b[39m         p = pi\n\u001b[32m     63\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m p \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m     64\u001b[39m     \u001b[38;5;66;03m# no pivot found.\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m65\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mNo existe solución única.\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     67\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m p != i:\n\u001b[32m     68\u001b[39m     \u001b[38;5;66;03m# swap rows\u001b[39;00m\n\u001b[32m     69\u001b[39m     logging.debug(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mIntercambiando filas \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mi\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m y \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mp\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mValueError\u001b[39m: No existe solución única."
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[32]\u001b[39m\u001b[32m, line 7\u001b[39m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msrc\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m eliminacion_gaussiana\n\u001b[32m      5\u001b[39m Ab = [[\u001b[32m1.\u001b[39m, \u001b[32m1\u001b[39m, \u001b[32m1\u001b[39m, \u001b[32m4\u001b[39m], [\u001b[32m2\u001b[39m, \u001b[32m2\u001b[39m, \u001b[32m1\u001b[39m, \u001b[32m6\u001b[39m], [\u001b[32m1\u001b[39m, \u001b[32m1\u001b[39m, \u001b[32m2\u001b[39m, \u001b[32m6\u001b[39m]]\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m sol, suma_count, resta_count, mult_count, div_count, intercambio_count = \u001b[43meliminacion_gaussiana\u001b[49m\u001b[43m(\u001b[49m\u001b[43mAb\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      8\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m'\u001b[39m\u001b[33mSolución:\u001b[39m\u001b[33m'\u001b[39m, sol)\n\u001b[32m      9\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m'\u001b[39m\u001b[33mSumas realizadas:\u001b[39m\u001b[33m'\u001b[39m, suma_count)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\IdkHowFoundMe\\Talleres\\TallerGauss\\taller-gauss-main\\src\\linear_sist_methods.py:34\u001b[39m, in \u001b[36meliminacion_gaussiana\u001b[39m\u001b[34m(A)\u001b[39m\n\u001b[32m     28\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34meliminacion_gaussiana\u001b[39m(A: np.ndarray | \u001b[38;5;28mlist\u001b[39m[\u001b[38;5;28mlist\u001b[39m[\u001b[38;5;28mfloat\u001b[39m | \u001b[38;5;28mint\u001b[39m]]) -> np.ndarray:\n\u001b[32m     29\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"Resuelve un sistema de ecuaciones lineales mediante el método de eliminación gaussiana.\u001b[39;00m\n\u001b[32m     30\u001b[39m \n\u001b[32m     31\u001b[39m \u001b[33;03m    ## Parameters\u001b[39;00m\n\u001b[32m     32\u001b[39m \n\u001b[32m     33\u001b[39m \u001b[33;03m    ``A``: matriz aumentada del sistema de ecuaciones lineales. Debe ser de tamaño n-by-(n+1), donde n es el número de incógnitas.\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m34\u001b[39m \n\u001b[32m     35\u001b[39m \u001b[33;03m    ## Return\u001b[39;00m\n\u001b[32m     36\u001b[39m \n\u001b[32m     37\u001b[39m \u001b[33;03m    ``solucion``: vector con la solución del sistema de ecuaciones lineales.\u001b[39;00m\n\u001b[32m     38\u001b[39m \n\u001b[32m     39\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m     41\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(A, np.ndarray):\n\u001b[32m     42\u001b[39m         logging.debug(\u001b[33m\"\u001b[39m\u001b[33mConvirtiendo A a numpy array.\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mValueError\u001b[39m: No existe soluciÃ³n Ãºnica."
      ]
     }
    ],
@@ -252,10 +273,13 @@
     "\n",
     "Ab = [[1., 1, 1, 4], [2, 2, 1, 6], [1, 1, 2, 6]]\n",
     "\n",
-    "sol, suma_count, resta_count = eliminacion_gaussiana(Ab)\n",
+    "sol, suma_count, resta_count, mult_count, div_count, intercambio_count = eliminacion_gaussiana(Ab)\n",
     "print('Solución:', sol)\n",
     "print('Sumas realizadas:', suma_count)\n",
-    "print('Restas realizadas:', resta_count)"
+    "print('Restas realizadas:', resta_count)\n",
+    "print('Multiplicaciones realizadas:', mult_count)\n",
+    "print('Divisiones realizadas:', div_count)\n",
+    "print('Intercambios de filas:', intercambio_count)"
    ]
   },
   {
@@ -274,29 +298,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[12-24 16:50:42][INFO] \n",
+      "[12-24 17:28:57][INFO] \n",
       "[[ 1.  1.  1.  4.]\n",
       " [ 0.  0. -1. -4.]\n",
-      " [ 0.  0.  1.  2.]]\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "No existe solución única.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 7\u001b[39m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msrc\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m eliminacion_gaussiana\n\u001b[32m      5\u001b[39m Ab = [[\u001b[32m1.\u001b[39m, \u001b[32m1\u001b[39m, \u001b[32m1\u001b[39m, \u001b[32m4\u001b[39m], [\u001b[32m2\u001b[39m, \u001b[32m2\u001b[39m, \u001b[32m1\u001b[39m, \u001b[32m4\u001b[39m], [\u001b[32m1\u001b[39m, \u001b[32m1\u001b[39m, \u001b[32m2\u001b[39m, \u001b[32m6\u001b[39m]]\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m \u001b[43meliminacion_gaussiana\u001b[49m\u001b[43m(\u001b[49m\u001b[43mAb\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\emore\\Downloads\\taller-gauss-main\\taller-gauss-main\\src\\linear_sist_methods.py:65\u001b[39m, in \u001b[36meliminacion_gaussiana\u001b[39m\u001b[34m(A)\u001b[39m\n\u001b[32m     61\u001b[39m         p = pi\n\u001b[32m     63\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m p \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m     64\u001b[39m     \u001b[38;5;66;03m# no pivot found.\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m65\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mNo existe solución única.\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     67\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m p != i:\n\u001b[32m     68\u001b[39m     \u001b[38;5;66;03m# swap rows\u001b[39;00m\n\u001b[32m     69\u001b[39m     logging.debug(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mIntercambiando filas \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mi\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m y \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mp\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mValueError\u001b[39m: No existe solución única."
+      " [ 0.  0.  1.  2.]]\n",
+      "Error: No existe soluciÃ³n Ãºnica.\n"
      ]
     }
    ],
@@ -308,10 +321,13 @@
     "Ab = [[1., 1, 1, 4], [2, 2, 1, 4], [1, 1, 2, 6]]\n",
     "\n",
     "try:\n",
-    "    sol, suma_count, resta_count = eliminacion_gaussiana(Ab)\n",
+    "    sol, suma_count, resta_count, mult_count, div_count, intercambio_count = eliminacion_gaussiana(Ab)\n",
     "    print('Solución:', sol)\n",
     "    print('Sumas realizadas:', suma_count)\n",
     "    print('Restas realizadas:', resta_count)\n",
+    "    print('Multiplicaciones realizadas:', mult_count)\n",
+    "    print('Divisiones realizadas:', div_count)\n",
+    "    print('Intercambios de filas:', intercambio_count)\n",
     "except Exception as e:\n",
     "    print('Error:', e)"
    ]
