--- a/TallerGauss/taller-gauss-main/gaussian_elimination.ipynb
+++ b/TallerGauss/taller-gauss-main/gaussian_elimination.ipynb
@@ -110,13 +110,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[12-25 19:37:38][INFO] 2025-12-25 19:37:38.244688\n",
       "The autoreload extension is already loaded. To reload it, use:\n",
       "  %reload_ext autoreload\n"
      ]
@@ -128,34 +129,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[12-24 17:29:13][INFO] \n",
-      "[[  1.   1.   0.   3.   4.]\n",
-      " [  0.  -1.  -1.  -5.  -7.]\n",
-      " [  0.  -4.  -1.  -7. -15.]\n",
-      " [  0.   3.   3.   2.   8.]]\n",
-      "[12-24 17:29:13][INFO] \n",
-      "[[  1.   1.   0.   3.   4.]\n",
-      " [  0.  -1.  -1.  -5.  -7.]\n",
-      " [  0.   0.   3.  13.  13.]\n",
-      " [  0.   0.   0. -13. -13.]]\n",
-      "[12-24 17:29:13][INFO] \n",
-      "[[  1.   1.   0.   3.   4.]\n",
-      " [  0.  -1.  -1.  -5.  -7.]\n",
-      " [  0.   0.   3.  13.  13.]\n",
-      " [  0.   0.   0. -13. -13.]]\n",
-      "Solución: [-1.  2.  0.  1.]\n",
-      "Sumas realizadas: 6\n",
-      "Restas realizadas: 29\n",
-      "Multiplicaciones realizadas: 32\n",
-      "Divisiones realizadas: 10\n",
-      "Intercambios de filas: 0\n"
+      "[12-25 19:37:39][INFO] \n",
+      "[[ 3.          1.         -4.          0.          5.          6.        ]\n",
+      " [ 0.         -0.33333333  3.33333333 -1.         -0.66666667  0.        ]\n",
+      " [ 0.         -2.         -1.          1.         -1.         -5.        ]\n",
+      " [ 0.          0.33333333  1.66666667  1.         -6.33333333  3.        ]\n",
+      " [ 0.         -1.33333333  0.33333333 -1.         -2.66666667  1.        ]]\n",
+      "[12-25 19:37:39][INFO] \n",
+      "[[ 3.          1.         -4.          0.          5.          6.        ]\n",
+      " [ 0.         -2.         -1.          1.         -1.         -5.        ]\n",
+      " [ 0.          0.          3.5        -1.16666667 -0.5         0.83333333]\n",
+      " [ 0.          0.          1.5         1.16666667 -6.5         2.16666667]\n",
+      " [ 0.          0.          1.         -1.66666667 -2.          4.33333333]]\n",
+      "[12-25 19:37:39][INFO] \n",
+      "[[ 3.00000000e+00  1.00000000e+00 -4.00000000e+00  0.00000000e+00\n",
+      "   5.00000000e+00  6.00000000e+00]\n",
+      " [ 0.00000000e+00 -2.00000000e+00 -1.00000000e+00  1.00000000e+00\n",
+      "  -1.00000000e+00 -5.00000000e+00]\n",
+      " [ 0.00000000e+00  0.00000000e+00  3.50000000e+00 -1.16666667e+00\n",
+      "  -5.00000000e-01  8.33333333e-01]\n",
+      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  1.66666667e+00\n",
+      "  -6.28571429e+00  1.80952381e+00]\n",
+      " [ 0.00000000e+00  0.00000000e+00  1.11022302e-16 -1.33333333e+00\n",
+      "  -1.85714286e+00  4.09523810e+00]]\n",
+      "[12-25 19:37:39][INFO] \n",
+      "[[ 3.00000000e+00  1.00000000e+00 -4.00000000e+00  0.00000000e+00\n",
+      "   5.00000000e+00  6.00000000e+00]\n",
+      " [ 0.00000000e+00 -2.00000000e+00 -1.00000000e+00  1.00000000e+00\n",
+      "  -1.00000000e+00 -5.00000000e+00]\n",
+      " [ 0.00000000e+00  0.00000000e+00  3.50000000e+00 -1.16666667e+00\n",
+      "  -5.00000000e-01  8.33333333e-01]\n",
+      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  1.66666667e+00\n",
+      "  -6.28571429e+00  1.80952381e+00]\n",
+      " [ 0.00000000e+00  0.00000000e+00  1.11022302e-16  0.00000000e+00\n",
+      "  -6.88571429e+00  5.54285714e+00]]\n",
+      "Solución: [ 1.90871369  2.19087137 -0.52697095 -1.95020747 -0.80497925]\n",
+      "Sumas realizadas: 10\n",
+      "Restas realizadas: 54\n",
+      "Multiplicaciones realizadas: 60\n",
+      "Divisiones realizadas: 15\n",
+      "Intercambios de filas: 2\n"
      ]
     }
    ],
@@ -163,7 +183,7 @@
     "%autoreload 2\n",
     "from src import eliminacion_gaussiana\n",
     "\n",
-    "Ab = [[1., 1, 0, 3, 4], [2, 1, -1, 1, 1], [3, -1, -1, 2, -3], [-1, 2, 3, -1, 4]]\n",
+    "Ab = [[2.,1,-1,1,-3,7], [1,0,2,-1,1,2], [0,-2,-1,1,-1,-5], [3,1,-4,0,5,6], [1,-1,-1,-1,-1,3]]\n",
     "\n",
     "sol, suma_count, resta_count, mult_count, div_count, intercambio_count = eliminacion_gaussiana(Ab)\n",
     "print('Solución:', sol)\n",
@@ -176,34 +196,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[12-24 17:29:07][INFO] \n",
-      "[[ 1 -1  2 -1 -8]\n",
-      " [ 0  0 -1 -1 -4]\n",
-      " [ 0  2 -1  1  6]\n",
-      " [ 0  0  2  4 12]]\n",
-      "[12-24 17:29:07][INFO] \n",
-      "[[ 1 -1  2 -1 -8]\n",
-      " [ 0  2 -1  1  6]\n",
-      " [ 0  0 -1 -1 -4]\n",
-      " [ 0  0  2  4 12]]\n",
-      "[12-24 17:29:07][INFO] \n",
-      "[[ 1 -1  2 -1 -8]\n",
-      " [ 0  2 -1  1  6]\n",
-      " [ 0  0 -1 -1 -4]\n",
-      " [ 0  0  0  2  4]]\n",
-      "Solución: [-7.  3.  2.  2.]\n",
-      "Sumas realizadas: 6\n",
-      "Restas realizadas: 29\n",
-      "Multiplicaciones realizadas: 32\n",
-      "Divisiones realizadas: 10\n",
-      "Intercambios de filas: 1\n"
+      "[12-25 19:46:24][INFO] \n",
+      "[[ 3.          1.         -4.          0.          5.          6.        ]\n",
+      " [ 0.         -0.33333333  3.33333333 -1.         -0.66666667  0.        ]\n",
+      " [ 0.         -2.         -1.          1.         -1.         -5.        ]\n",
+      " [ 0.          0.33333333  1.66666667  1.         -6.33333333  3.        ]\n",
+      " [ 0.         -1.33333333  0.33333333 -1.         -2.66666667  1.        ]]\n",
+      "[12-25 19:46:24][INFO] \n",
+      "[[ 3.          1.         -4.          0.          5.          6.        ]\n",
+      " [ 0.         -2.         -1.          1.         -1.         -5.        ]\n",
+      " [ 0.          0.          3.5        -1.16666667 -0.5         0.83333333]\n",
+      " [ 0.          0.          1.5         1.16666667 -6.5         2.16666667]\n",
+      " [ 0.          0.          1.         -1.66666667 -2.          4.33333333]]\n",
+      "[12-25 19:46:24][INFO] \n",
+      "[[ 3.00000000e+00  1.00000000e+00 -4.00000000e+00  0.00000000e+00\n",
+      "   5.00000000e+00  6.00000000e+00]\n",
+      " [ 0.00000000e+00 -2.00000000e+00 -1.00000000e+00  1.00000000e+00\n",
+      "  -1.00000000e+00 -5.00000000e+00]\n",
+      " [ 0.00000000e+00  0.00000000e+00  3.50000000e+00 -1.16666667e+00\n",
+      "  -5.00000000e-01  8.33333333e-01]\n",
+      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  1.66666667e+00\n",
+      "  -6.28571429e+00  1.80952381e+00]\n",
+      " [ 0.00000000e+00  0.00000000e+00  1.11022302e-16 -1.33333333e+00\n",
+      "  -1.85714286e+00  4.09523810e+00]]\n",
+      "[12-25 19:46:24][INFO] \n",
+      "[[ 3.00000000e+00  1.00000000e+00 -4.00000000e+00  0.00000000e+00\n",
+      "   5.00000000e+00  6.00000000e+00]\n",
+      " [ 0.00000000e+00 -2.00000000e+00 -1.00000000e+00  1.00000000e+00\n",
+      "  -1.00000000e+00 -5.00000000e+00]\n",
+      " [ 0.00000000e+00  0.00000000e+00  3.50000000e+00 -1.16666667e+00\n",
+      "  -5.00000000e-01  8.33333333e-01]\n",
+      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  1.66666667e+00\n",
+      "  -6.28571429e+00  1.80952381e+00]\n",
+      " [ 0.00000000e+00  0.00000000e+00  1.11022302e-16  0.00000000e+00\n",
+      "  -6.88571429e+00  5.54285714e+00]]\n",
+      "Solución: [ 1.90871369  2.19087137 -0.52697095 -1.95020747 -0.80497925]\n",
+      "Sumas realizadas: 10\n",
+      "Restas realizadas: 54\n",
+      "Multiplicaciones realizadas: 60\n",
+      "Divisiones realizadas: 15\n",
+      "Intercambios de filas: 2\n"
      ]
     }
    ],
@@ -211,7 +250,7 @@
     "%autoreload 2\n",
     "from src import eliminacion_gaussiana\n",
     "\n",
-    "Ab = [[1, -1, 2, -1, -8], [2, -2, 3, -3, -20], [1, 1, 1, 0, -2], [1, -1, 4, 3, 4]]\n",
+    "Ab = [[2.,1,-1,1,-3,7], [1,0,2,-1,1,2], [0,-2,-1,1,-1,-5], [3,1,-4,0,5,6], [1,-1,-1,-1,-1,3]]\n",
     "\n",
     "sol, suma_count, resta_count, mult_count, div_count, intercambio_count = eliminacion_gaussiana(Ab)\n",
     "print('Solución:', sol)\n",
